--- a/style.css
+++ b/style.css
@@ -102,3 +102,59 @@ h1 {
         opacity: 0;
     }
 }
+
+#playMusicButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #ff4b5c;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    font-size: 16px;
+    box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: transform 0.2s, background-color 0.3s, box-shadow 0.3s;
+    z-index: 100;
+}
+
+#playMusicButton:hover {
+    background-color: #ff1e42;
+    transform: scale(1.1);
+    box-shadow: 4px 6px 8px rgba(0, 0, 0, 0.3);
+}
+
+#playMusicButton:active {
+    transform: scale(0.9);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+@media screen and (max-width: 600px) {
+    #playMusicButton {
+        bottom: 15px; 
+        right: 15px;  
+        padding: 8px 16px; 
+        font-size: 14px; 
+        box-shadow: 1px 3px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    #message {
+        font-size: 18px; 
+        padding: 0 10px; 
+    }
+
+    .heart {
+        font-size: 18px; 
+    }
+
+    #secretButton {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+}
